# convex-codex-component

./: .gitignore  .gitmodules  README.md  eslint.config.mjs  package.json  pnpm-lock.yaml
.changeset/: README.md  activity-authority-stream-drain.md  actor-resolution-consumer-auth.md  actor-resolver-first-class.md  adapter-first-runtime-and-convex-package.md  add-token-usage.md  alpha-readiness-docs-and-release-gate.md  api-simplification-phase2.md  beta-architecture-restructure.md  beta-release-polish.md  bridge-contract-tooling-patch.md  bright-eels-admire.md  bright-glasses-wave.md  bright-hounds-join.md  bright-seahorses-teach.md  cascade-delete-jobs.md  chatgpt-auth-refresh-schema-update.md  ci-trigger-changelog.md  clean-maps-accept.md  clever-points-brush.md  curly-fans-notice.md  (+116 more)
apps/examples/tauri-app/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
apps/examples/tauri-app/src-tauri/capabilities/: default.json
apps/examples/tauri-app/src-tauri/permissions/autogenerated/: cancel_account_login.toml  get_bridge_state.toml  interrupt_turn.toml  login_account.toml  logout_account.toml  open_thread.toml  read_account.toml  read_account_rate_limits.toml  refresh_local_threads.toml  respond_chatgpt_auth_tokens_refresh.toml  respond_command_approval.toml  respond_file_change_approval.toml  respond_tool_user_input.toml  send_user_turn.toml  set_disabled_tools.toml  start_bridge.toml  stop_bridge.toml
apps/examples/tauri-app/src-tauri/src/: bridge_contract_generated.rs  bridge_dispatch_generated.rs  bridge_invoke_handlers_generated.rs  bridge_process.rs  main.rs
(+175 files in other folders)
